v2/src/markdown/snapshots/shiba_preview__markdown__parser__tests__block_open_inline_close_html.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "raw": "<span>\n</span>",
      "t": "html"
    },
    {
      "c": [
        "FOO"
      ],
      "t": "p"
    },
    {
      "c": [
        "X",
        {
          "raw": "",
          "t": "html"
        }
      ],
      "t": "p"
    }
  ]
}
