v2/src/markdown/snapshots/shiba_preview__markdown__parser__tests__codeblock.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        {
          "c": [
            "indented code block\n",
            "indented code block\n",
            "indented code block\n"
          ],
          "t": "code"
        }
      ],
      "t": "pre"
    },
    {
      "c": [
        {
          "c": [
            "fenced code block 1\nfenced code block 1\nfenced code block 1\n"
          ],
          "t": "code"
        }
      ],
      "t": "pre"
    },
    {
      "c": [
        {
          "c": [
            "fenced code block 2\nfenced code block 2\nfenced code block 2\n"
          ],
          "t": "code"
        }
      ],
      "t": "pre"
    }
  ]
}
