v2/src/markdown/snapshots/shiba_preview__markdown__parser__tests__escaped_characters_in_text.snap
---
source: src/markdown/parser.rs
expression: buf
---
JSON.parse('{"kind":"render_tree","tree":[{"t":"p","c":["This line\'s text contains the single quote."]},{"t":"p","c":["This line contains ","\\\\ several \\" escaped \\t things!"]}]}')
