v2/src/markdown/snapshots/shiba_preview__markdown__parser__tests__inline_items_nested_in_inline_html.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        {
          "raw": "<span>String, italic, link, image, <span>nested HTML</span></span>",
          "t": "html"
        }
      ],
      "t": "p"
    }
  ]
}
