v2/src/markdown/snapshots/shiba_preview__markdown__parser__tests__inline_open_block_close_html.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        {
          "raw": "<span>X</span>",
          "t": "html"
        }
      ],
      "t": "p"
    },
    {
      "c": [
        "FOO"
      ],
      "t": "p"
    },
    {
      "raw": "\n",
      "t": "html"
    }
  ]
}
