v2/src/markdown/snapshots/shiba_preview__markdown__parser__tests__math.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        "Inline math",
        ": ",
        {
          "expr": "e = mc^2",
          "inline": true,
          "t": "math"
        },
        "."
      ],
      "t": "p"
    },
    {
      "c": [
        "Block math",
        ":"
      ],
      "t": "p"
    },
    {
      "c": [
        {
          "expr": "\\left( \\sum_{k=1}^n a_k b_k \\right)^2 \\leq \\left( \\sum_{k=1}^n a_k^2 \\right) \\left( \\sum_{k=1}^n b_k^2 \\right)",
          "inline": false,
          "t": "math"
        }
      ],
      "t": "p"
    }
  ]
}
